--- a/src/styles.css
+++ b/src/styles.css
@@ -110,6 +110,26 @@ ol {
   display: none;
 }
 
-.button > .spinner.is-hidden {
-  display: none;
+.btn.disabled,
+.btn:disabled {
+  opacity: 0.65;
 }
+
+/* .button > .spinner.is-hidden {
+  display: none;
+} */
+
+/* .spinner-border-sm {
+  width: 1rem;
+  height: 1rem;
+  border-width: 2em;
+} */
+
+/* .spinner-border {
+  display: inline-block;
+  vertical-align: text-bottom;
+  border-right-color: transparent;
+  border: 0.25em solid currentColor;
+  border-radius: 50%;
+  animation: spinner-border 0.75s linear infinite;
+} */
